# openvino_mnist

./: README.md
DataSets/: a
picture_mnist/: CMakeLists.txt  main.cpp
picture_mnist/configFiles/: yolov5_mobilev3_best.onnx
picture_mnist/data/save_data/: result.csv
picture_mnist/include/: yolov5_openvino.h
picture_mnist/src/: yolov5_openvino.cpp
picture_mnist_Detect_Project/: CMakeLists.txt
picture_mnist_Detect_Project/include/: yolov5_openvino.h
picture_mnist_Detect_Project/save_data/: result.csv
picture_mnist_Detect_Project/src/: main.cpp  yolov5_openvino.cpp
video_mnist_Detect_Project/include/: yolov5_openvino.h
video_mnist_Detect_Project/src/: main.cpp  yolov5_openvino.cpp
